--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TiendaOnePiece
 excludes=
+file.reference.RMITienda.jar=C:\\Users\\Sebas\\Documents\\NetBeansProjects\\RMITienda\\dist\\RMITienda.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.RMITienda.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
